convert to modules, create proper utils alias, cleanup

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
-        "baseUrl": "./"
+        "baseUrl": ".",
+        "paths": {
+            "#utils": ["./src/utils/index.js"]
+        }
     },
     "exclude": ["node_modules", "build"]
 }
