--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "1.0.0",
     "description": "Norfolk.js Website ===================",
     "main": "index.js",
+    "type": "module",
     "engines": {
         "npm": ">=8.0.00",
         "node": ">=18.0.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "env $(cat .env | grep -v \"#\" | xargs) nodemon ./src/dev.js -e js,html,md",
         "start": "env $(cat .env | grep -v \"#\" | xargs) npx http-server build",
         "prestart": "npm run build",
-        "build": "env $(cat .env | grep -v \"#\" | xargs) node ./src/build.js",
+        "build": "env $(cat .env | grep -v \"#\" | xargs) node ./src/build.js --input-type=module",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
@@ -31,8 +31,9 @@
         "gh-pages": "^6.0.0",
         "handlebars": "^4.7.8",
         "marked": "^10.0.0",
-        "nodemon": "^3.0.1",
-        "utils": "file:./src/utils"
+        "nodemon": "^3.0.1"
     },
-    "dependencies": {}
+    "imports": {
+        "#utils": "./src/utils/index.js"
+    }
 }
