--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "module": "CommonJS",
         "baseUrl": ".",
         "paths": {
             "#utils": ["./src/utils/index.js"]
