--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
     "main": "index.js",
     "type": "module",
     "engines": {
-        "npm": ">=8.0.00",
-        "node": ">=18.0.0"
+        "npm": ">=8",
+        "node": ">=18"
     },
     "scripts": {
-        "dev": "nodemon -r dotenv/config --watch \"*\" -e \"*\" src/dev.js",
-        "start": "npx http-server build -o",
-        "prestart": "npm run build",
-        "prebuild": "rm -rf build && mkdir build && cp -R static/. build/",
-        "build": "node ./src/build.js --input-type=module",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "dev": "yelk -dev",
+        "start": "yelk -start",
+        "build": "yelk -build",
+        "deploy": "yelk -deploy"
     },
     "repository": {
         "type": "git",
@@ -28,14 +25,6 @@
     },
     "homepage": "https://github.com/iambriansreed/norfolkjs.github.io#readme",
     "devDependencies": {
-        "eslint": "^8.54.0",
-        "gh-pages": "^6.0.0",
-        "handlebars": "^4.7.8",
-        "marked": "^10.0.0",
-        "nodemon": "^3.0.1"
-    },
-    "dependencies": {
-        "dotenv": "^16.4.1",
-        "moment": "^2.30.1"
+        "yelk": "file:./../yelk"
     }
 }
